# jobscreeningagent

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  SPEC.md  config.yml  docker-compose.yml  profile.md  pyproject.toml
agent/: main.py  scheduler.py
agent/db/: models.py  repository.py
agent/generation/: cover_letter.py  resume_tailor.py
agent/ingest/: base.py  careers_page.py  indeed.py  linkedin.py  playwright_scraper.py  portal_prompts.py
agent/scoring/: embedder.py  llm_scorer.py  pipeline.py  prompts.py
agent/tools/: debug_portals.py
api/: deps.py  main.py
api/routes/: generate.py  jobs.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  api.ts
frontend/src/components/: JobCard.tsx  ScoreBar.tsx  StatusBadge.tsx
profile/: career_pages.txt  master_resume.docx
tests/: test_db.py  test_generation.py  test_ingest.py  test_playwright_scraper.py  test_scoring.py
