[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "job-agent"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "sqlalchemy>=2.0",
    "apscheduler>=3.10",
    "pyyaml>=6.0",
    "anthropic>=0.28",
    "openai>=1.30",
    "sentence-transformers>=3.0",
    "python-docx>=1.1",
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "lxml>=5.2",
    "feedparser>=6.0",
    "playwright>=1.44",
    "pydantic>=2.0",
    "python-multipart>=0.0.9",
    "python-dotenv>=1.0",
    "certifi>=2024.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "black>=24.0",
    "respx>=0.21",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["agent*", "api*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
